--- a/index.html
+++ b/index.html
@@ -5,18 +5,51 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Manni Daniele | Progetto</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css" />
-    <link rel="stylesheet" href="./assets/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.min.css" />
+    <!-- SASS -->
+    <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
   <body>
     <!-- Inizio Layout -->
     <div class="container">
-      <div class="p-3 text-primary-emphasis bg-primary-subtle border border-primary-subtle rounded-3">Questo è un consiglio</div>
-      <div class="p-3 text-success-emphasis bg-success-subtle border border-success-subtle rounded-3">Operazione completata con successo.</div>
-      <div class="p-3 text-danger-emphasis bg-danger-subtle border border-danger-subtle rounded-3">Impossibile eseguire la richiesta</div>
-      <div class="p-3 text-warning-emphasis bg-warning-subtle border border-warning-subtle rounded-3">Compilare tutti i campi</div>
+      <div class="accordion" id="accordionExample">
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="headingOne">
+            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">Chi sono</button>
+          </h2>
+          <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+            <div class="accordion-body">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde nulla ducimus nihil eveniet voluptatem nostrum voluptas earum, nobis, labore at odit reprehenderit, iusto architecto ipsam
+              doloribus maiores cum iste fugit?
+            </div>
+          </div>
+        </div>
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="headingTwo">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">Galleria</button>
+          </h2>
+          <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+            <div class="accordion-body">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore officia possimus alias, explicabo eos hic exercitationem veniam modi officiis unde numquam totam quod velit! Cumque
+              inventore velit minima aliquam odio?
+            </div>
+          </div>
+        </div>
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="headingThree">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">Portfolio</button>
+          </h2>
+          <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+            <div class="accordion-body">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam similique suscipit hic. Nihil quibusdam quo, ipsum fugit voluptate iure aspernatur dolor blanditiis fuga illum dicta vitae
+              dolorem, ipsa voluptatibus molestias!
+              <button type="button" class="btn btn-light">Info</button>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
-    <!-- Includo Bootstrap v5.3.0-alpha1 -->
-    <script src="./assets/js/bootstrap.bundle.min.js"></script>
+    <!-- Includo Bootstrap -->
+    <script src="./node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
